--- a/getfedora.org/po/sq.po
+++ b/getfedora.org/po/sq.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2017-07-09 17:08+0200\n"
+"POT-Creation-Date: 2017-07-11 22:31+0200\n"
 "PO-Revision-Date: 2017-04-02 05:50-0400\n"
 "Last-Translator: Enea Jahollari <jahollarienea14@gmail.com>\n"
 "Language-Team: Albanian (http://www.transifex.com/projects/p/fedora-web/language/sq/)\n"
@@ -2629,9 +2629,10 @@ msgid "OK"
 msgstr "OK"
 
 #: data/templates/moretofedora.html:12
-#, fuzzy, python-format
-msgid "There's more to <img class=\"inlinelogo\" src=\"%s\" alt=\"Fedora Logo\">"
-msgstr "Ka më tepër te <img class=\"inlinelogo\" src=\"%s\" alt=\"Stema e Fedora-s\">"
+msgid ""
+"There's more to <img class=\"inlinelogo\" src=\"../../static/images/fedora-"
+"logotext.png\" alt=\"Fedora Logo\">"
+msgstr ""
 
 #: data/templates/productselector-cloud.html:14
 msgid "Lean. Powerful. Everycloud ready."
