--- a/getfedora.org/po/th.po
+++ b/getfedora.org/po/th.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2017-07-09 17:08+0200\n"
+"POT-Creation-Date: 2017-07-11 22:31+0200\n"
 "PO-Revision-Date: 2015-08-17 09:00-0400\n"
 "Last-Translator: Sukit Arseanrapoj <sukit.arseanrapoj@gmail.com>\n"
 "Language-Team: Thai (http://www.transifex.com/projects/p/fedora-web/language/th/)\n"
@@ -2438,8 +2438,9 @@ msgid "OK"
 msgstr "ตกลง"
 
 #: data/templates/moretofedora.html:12
-#, fuzzy, python-format
-msgid "There's more to <img class=\"inlinelogo\" src=\"%s\" alt=\"Fedora Logo\">"
+msgid ""
+"There's more to <img class=\"inlinelogo\" src=\"../../static/images/fedora-"
+"logotext.png\" alt=\"Fedora Logo\">"
 msgstr ""
 
 #: data/templates/productselector-cloud.html:14
