--- a/getfedora.org/po/ar.po
+++ b/getfedora.org/po/ar.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2017-07-09 17:08+0200\n"
+"POT-Creation-Date: 2017-07-11 22:31+0200\n"
 "PO-Revision-Date: 2016-12-20 04:31-0500\n"
 "Last-Translator: Robert Mayr <robyduck@fedoraproject.org>\n"
 "Language-Team: Arabic (http://www.transifex.com/projects/p/fedora-web/language/ar/)\n"
@@ -2463,8 +2463,9 @@ msgid "OK"
 msgstr "موافق"
 
 #: data/templates/moretofedora.html:12
-#, fuzzy, python-format
-msgid "There's more to <img class=\"inlinelogo\" src=\"%s\" alt=\"Fedora Logo\">"
+msgid ""
+"There's more to <img class=\"inlinelogo\" src=\"../../static/images/fedora-"
+"logotext.png\" alt=\"Fedora Logo\">"
 msgstr ""
 
 #: data/templates/productselector-cloud.html:14
