--- a/getfedora.org/po/fi.po
+++ b/getfedora.org/po/fi.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2017-07-09 17:08+0200\n"
+"POT-Creation-Date: 2017-07-11 22:31+0200\n"
 "PO-Revision-Date: 2017-05-03 04:10-0400\n"
 "Last-Translator: Toni Rantala <trantalafilo@gmail.com>\n"
 "Language-Team: Finnish (http://www.transifex.com/projects/p/fedora-web/language/fi/)\n"
@@ -2631,11 +2631,10 @@ msgid "OK"
 msgstr "OK"
 
 #: data/templates/moretofedora.html:12
-#, fuzzy, python-format
-msgid "There's more to <img class=\"inlinelogo\" src=\"%s\" alt=\"Fedora Logo\">"
+msgid ""
+"There's more to <img class=\"inlinelogo\" src=\"../../static/images/fedora-"
+"logotext.png\" alt=\"Fedora Logo\">"
 msgstr ""
-"Muista myös muut mukaelmat <img class=\"inlinelogo\" src=\"%s\" alt=\"Fedora"
-" Logo\">"
 
 #: data/templates/productselector-cloud.html:14
 msgid "Lean. Powerful. Everycloud ready."
