--- a/getfedora.org/po/ja.po
+++ b/getfedora.org/po/ja.po
@@ -16,8 +16,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2017-07-09 17:08+0200\n"
-"PO-Revision-Date: 2017-06-18 01:24-0400\n"
+"POT-Creation-Date: 2017-07-11 22:31+0200\n"
+"PO-Revision-Date: 2017-07-11 04:23-0400\n"
 "Last-Translator: Ooyama Yosiyuki <qqke6wd9k@apricot.ocn.ne.jp>\n"
 "Language-Team: Japanese (http://www.transifex.com/projects/p/fedora-web/language/ja/)\n"
 "MIME-Version: 1.0\n"
@@ -132,7 +132,7 @@ msgstr ""
 #: data/content/index.html:53
 #, python-format
 msgid "Fedora %(rel)s released! Get it now."
-msgstr ""
+msgstr "Fedora %(rel)s がリリースされました! 今すぐ入手してみてください！"
 
 #: data/content/index.html:67 data/content/verify.html:39
 #: data/templates/productselector-workstation.html:12
@@ -2470,9 +2470,10 @@ msgid "OK"
 msgstr "OK"
 
 #: data/templates/moretofedora.html:12
-#, fuzzy, python-format
-msgid "There's more to <img class=\"inlinelogo\" src=\"%s\" alt=\"Fedora Logo\">"
-msgstr "もっと、あります <img class=\"inlinelogo\" src=\"%s\" alt=\"Fedora Logo\">"
+msgid ""
+"There's more to <img class=\"inlinelogo\" src=\"../../static/images/fedora-"
+"logotext.png\" alt=\"Fedora Logo\">"
+msgstr ""
 
 #: data/templates/productselector-cloud.html:14
 msgid "Lean. Powerful. Everycloud ready."
