--- a/getfedora.org/po/nl.po
+++ b/getfedora.org/po/nl.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2017-07-09 17:08+0200\n"
+"POT-Creation-Date: 2017-07-11 22:31+0200\n"
 "PO-Revision-Date: 2017-07-10 01:09-0400\n"
 "Last-Translator: Geert Warrink <geert.warrink@onsnet.nu>\n"
 "Language-Team: Dutch (http://www.transifex.com/projects/p/fedora-web/language/nl/)\n"
@@ -2714,9 +2714,10 @@ msgid "OK"
 msgstr "OK"
 
 #: data/templates/moretofedora.html:12
-#, fuzzy, python-format
-msgid "There's more to <img class=\"inlinelogo\" src=\"%s\" alt=\"Fedora Logo\">"
-msgstr "Er is meer aan <img class=\"inlinelogo\" src=\"%s\" alt=\"Fedora Logo\">"
+msgid ""
+"There's more to <img class=\"inlinelogo\" src=\"../../static/images/fedora-"
+"logotext.png\" alt=\"Fedora Logo\">"
+msgstr ""
 
 #: data/templates/productselector-cloud.html:14
 msgid "Lean. Powerful. Everycloud ready."
