--- a/getfedora.org/po/pl.po
+++ b/getfedora.org/po/pl.po
@@ -11,13 +11,14 @@
 # Piotr Drąg <piotrdrag@gmail.com>, 2015. #zanata
 # Piotr Drąg <piotrdrag@gmail.com>, 2016. #zanata
 # Piotr Drąg <piotrdrag@gmail.com>, 2017. #zanata
+# Robert Mayr <robyduck@fedoraproject.org>, 2017. #zanata
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2017-07-09 17:08+0200\n"
-"PO-Revision-Date: 2017-07-10 10:32-0400\n"
-"Last-Translator: Piotr Drąg <piotrdrag@gmail.com>\n"
+"POT-Creation-Date: 2017-07-11 22:31+0200\n"
+"PO-Revision-Date: 2017-07-11 04:34-0400\n"
+"Last-Translator: Robert Mayr <robyduck@fedoraproject.org>\n"
 "Language-Team: Polish (http://www.transifex.com/projects/p/fedora-web/language/pl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2673,9 +2674,12 @@ msgid "OK"
 msgstr "OK"
 
 #: data/templates/moretofedora.html:12
-#, fuzzy, python-format
-msgid "There's more to <img class=\"inlinelogo\" src=\"%s\" alt=\"Fedora Logo\">"
-msgstr "Inne warianty systemu <img class=\"inlinelogo\" src=\"%s\" alt=\"Logo Fedory\">"
+msgid ""
+"There's more to <img class=\"inlinelogo\" src=\"../../static/images/fedora-"
+"logotext.png\" alt=\"Fedora Logo\">"
+msgstr ""
+"Inne warianty systemu <img class=\"inlinelogo\" src=\"../../static/images"
+"/fedora-logotext.png\" alt=\"Fedora Logo\">"
 
 #: data/templates/productselector-cloud.html:14
 msgid "Lean. Powerful. Everycloud ready."
