--- a/getfedora.org/po/ro.po
+++ b/getfedora.org/po/ro.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2017-07-09 17:08+0200\n"
+"POT-Creation-Date: 2017-07-11 22:31+0200\n"
 "PO-Revision-Date: 2016-02-25 05:31-0500\n"
 "Last-Translator: Jobava <jobaval10n@gmail.com>\n"
 "Language-Team: Romanian (http://www.transifex.com/projects/p/fedora-web/language/ro/)\n"
@@ -2343,8 +2343,9 @@ msgid "OK"
 msgstr "OK"
 
 #: data/templates/moretofedora.html:12
-#, fuzzy, python-format
-msgid "There's more to <img class=\"inlinelogo\" src=\"%s\" alt=\"Fedora Logo\">"
+msgid ""
+"There's more to <img class=\"inlinelogo\" src=\"../../static/images/fedora-"
+"logotext.png\" alt=\"Fedora Logo\">"
 msgstr ""
 
 #: data/templates/productselector-cloud.html:14
