--- a/getfedora.org/po/ru.po
+++ b/getfedora.org/po/ru.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2017-07-09 17:08+0200\n"
+"POT-Creation-Date: 2017-07-11 22:31+0200\n"
 "PO-Revision-Date: 2017-06-04 04:32-0400\n"
 "Last-Translator: Igor Gorbounov <igor.gorbounov@gmail.com>\n"
 "Language-Team: Russian (http://www.transifex.com/projects/p/fedora-web/language/ru/)\n"
@@ -2658,9 +2658,10 @@ msgid "OK"
 msgstr "ОК"
 
 #: data/templates/moretofedora.html:12
-#, fuzzy, python-format
-msgid "There's more to <img class=\"inlinelogo\" src=\"%s\" alt=\"Fedora Logo\">"
-msgstr "Еще <img class=\"inlinelogo\" src=\"%s\" alt=\"Fedora Logo\">"
+msgid ""
+"There's more to <img class=\"inlinelogo\" src=\"../../static/images/fedora-"
+"logotext.png\" alt=\"Fedora Logo\">"
+msgstr ""
 
 #: data/templates/productselector-cloud.html:14
 msgid "Lean. Powerful. Everycloud ready."
